# otter

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml
crates/cli/: Cargo.toml  README.md
crates/core/: Cargo.toml  README.md
crates/core/examples/: print_config.rs  print_settings.rs
crates/core/examples/config/: config.json  config.toml
crates/core/src/: config.rs  lib.rs  main.rs  settings.rs
crates/http/: Cargo.toml
crates/http/src/: lib.rs
crates/wg/: Cargo.toml
crates/wg/src/: lib.rs
examples/: config.json
