[workspace]
members = ["crates/*"]

[workspace.package]
version = "0.0.1"
authors = ["Mogeko <zhengjunyi@live.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.68"

[workspace.dependencies]
tokio = { version = "1.29", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.0"

# Internal
otter = { path = "crates/core" }
otter_wg = { path = "crates/wg" }
otter_http = { path = "crates/http" }
