[package]
name = "otter-wg"
description = "A flexible and efficient HTTP proxy"
homepage = "https://github.com/mogeko/otter/tree/master/crates/wg"
repository = "https://github.com/mogeko/otter/tree/master/crates/wg"
readme = "README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
